# repos

cpp/labs/matrix/: CMakeLists.txt
cpp/labs/matrix/include/: bool_matrix.h
cpp/labs/pet/: .ccls  main  main.cpp
cpp/labs/pet/.ccls-cache/@@home@anhuk@repos@cpp@labs@pet/: @include@c++@10.2.0@backward@binders.h.blob  @include@c++@10.2.0@bits@algorithmfwd.h.blob  @include@c++@10.2.0@bits@alloc_traits.h.blob  @include@c++@10.2.0@bits@allocator.h.blob  @include@c++@10.2.0@bits@basic_ios.h.blob  @include@c++@10.2.0@bits@basic_ios.tcc.blob  @include@c++@10.2.0@bits@basic_string.h.blob  @include@c++@10.2.0@bits@basic_string.tcc.blob  @include@c++@10.2.0@bits@char_traits.h.blob  @include@c++@10.2.0@bits@charconv.h.blob  @include@c++@10.2.0@bits@concept_check.h.blob  @include@c++@10.2.0@bits@cpp_type_traits.h.blob  @include@c++@10.2.0@bits@cxxabi_forced.h.blob  @include@c++@10.2.0@bits@cxxabi_init_exception.h.blob  @include@c++@10.2.0@bits@exception.h.blob  @include@c++@10.2.0@bits@exception_defines.h.blob  (+170 more)
cpp/labs/posibnik/: Makefile
cpp/labs/posibnik/src/: main.cpp
cpp/labs/practicum/: Makefile
cpp/labs/practicum/include/: Rectangle.hpp
cpp/labs/practicum/src/: Rectangle.cpp  main.cpp
cpp/learn/dark/: 1.cpp  lear_ctime  lear_ctime.cpp  main  main.cpp  test  test.cpp  time
cpp/qt/button/: main.cpp
cpp/qt/hello_world/: Makefile  hello.cpp  hello_world  hello_world.pro
dlang/learn/: f.d  hello  hello.d  t.d
golang/http-rest-api/: go.mod
golang/http-rest-api/cmd/apiserver/: main.go
golang/http-rest-api/configs/: apiserver.toml
(+3 files in other folders)
